[gd_scene load_steps=4 format=3 uid="uid://dsfy4vmdwscns"]

[ext_resource type="Script" uid="uid://2tvut42xa80m" path="res://Menu/pause.gd" id="1_sh1jq"]
[ext_resource type="AudioStream" uid="uid://cslnxx10lt6i1" path="res://Assets/confirm_style_5_005.wav" id="2_sh1jq"]
[ext_resource type="AudioStream" uid="uid://bdcs4pgfqqnq2" path="res://Assets/error_style_4_001.wav" id="3_rgvw2"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_sh1jq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.37254903, 0.05882353, 0.2509804, 0.13333334)

[node name="Container" type="Container" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -56.0
offset_right = 66.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Container"]
layout_mode = 2
mouse_behavior_recursive = 1

[node name="Button" type="Button" parent="ColorRect/Container/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9098039, 0.8392157, 1)
theme_override_colors/font_focus_color = Color(0.9843137, 0.54509807, 0.14117648, 1)
theme_override_colors/font_pressed_color = Color(0.9843137, 0.54509807, 0.14117648, 1)
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Button3" type="Button" parent="ColorRect/Container/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9098039, 0.8392157, 1)
theme_override_colors/font_focus_color = Color(0.9843137, 0.54509807, 0.14117648, 1)
theme_override_colors/font_pressed_color = Color(0.9843137, 0.54509807, 0.14117648, 1)
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="Button2" type="Button" parent="ColorRect/Container/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9098039, 0.8392157, 1)
theme_override_colors/font_focus_color = Color(0.9843137, 0.54509807, 0.14117648, 1)
theme_override_colors/font_pressed_color = Color(0.9843137, 0.54509807, 0.14117648, 1)
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Pick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_sh1jq")

[node name="Move" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rgvw2")
volume_db = 12.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
ignore_time_scale = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.3
ignore_time_scale = true

[connection signal="focus_exited" from="ColorRect/Container/VBoxContainer/Button" to="." method="_on_button_focus_exited"]
[connection signal="pressed" from="ColorRect/Container/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="focus_exited" from="ColorRect/Container/VBoxContainer/Button2" to="." method="_on_button_2_focus_exited"]
[connection signal="pressed" from="ColorRect/Container/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
